--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,11 +32,11 @@ jobs:
       run: dotnet build --configuration Release
 
     - name: Publish
-      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/asp_publish
+      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}\asp_publish
 
     - name: 'Upload Artifact'
       uses: actions/upload-artifact@v3
       with:
         name: upload artifact
-        path: ${{env.DOTNET_ROOT}}/asp_publish
+        path: ${{env.DOTNET_ROOT}}\asp_publish
    
