--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,5 +41,5 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: upload artifact
-        path: ./asp_publish
+        path: ./src/TodoApi/asp_publish
    
